[GL-7724] Fix to work well on iOS app

--- a/app/static_src/less/partials/mobile_app_footer.less
+++ b/app/static_src/less/partials/mobile_app_footer.less
@@ -18,6 +18,7 @@
       text-align: center;
       position: relative;
       &-link {
+        cursor: pointer;
         display: flex;
         flex-direction: column;
         justify-content: end;
